# AnthropicAI

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted--7-minutes-read-Wondering-what-else-is-there-about-various-prompting-techniques-Imagine-an-LLM-tha-1736232820902.txt  Pasted--8-minutes-read-Have-you-ever-faced-a-complicated-problem-that-seemed-too-confusing-to-tackle-They-1736232709734.txt  Pasted-Batch-API-Process-jobs-asynchronously-with-Batch-API-Learn-how-to-use-OpenAI-s-Bat-1736231962666.txt  Pasted-Code-Explanation-To-provide-a-detailed-explanation-of-the-customer-services-app-in-your-project--1736236483625.txt  Pasted-Fine-tuning-Fine-tune-models-for-better-results-and-efficiency-Fine-tuning-lets--1736232486274.txt  Pasted-Optimizing-LLM-Accuracy-Maximize-correctness-and-consistent-behavior-whe-1736232437520.txt  Pasted-Prompt-engineering-Enhance-results-with-prompt-engineering-strategies-Thi-1736232417282.txt  Pasted-Prompt-generation-Generate-prompts-and-schemas-in-Playground-The-Generat-1736231880271.txt  Pasted-You-are-an-AI-assistant-specialized-in-Django-development-Your-role-is-to-help-users-complete-tasks-1736233538442.txt  Pasted-import-anthropic-client-anthropic-Anthropic-defaults-to-os-environ-get-ANTHROPIC-API-K-1736218961680.txt  github_com_anthropics_courses.md
client/src/: App.tsx  index.css
core/: asgi.py  settings.py  urls.py
db/: schema.ts
django_ai_assistant/: apps.py  consumers.py  models.py  routing.py  services.py  urls.py  views.py
server/: index.ts  routes.ts
(+21 files in other folders)
